<resources>
    <string name="app_name">Attendance</string>
    <string name="toast_message">Toast message</string>
    <string name="attendance_status">Status</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string-array name="user_type">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter message</string>
    <string name="admin_powers">Admin powers</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="file_preference">com.pkk.android.attendance.FILE_PREFERENCE_KEY</string>
    <string name="present_marked">Present \n Marked</string>
    <string name="title_activity_teacher2">TeacherActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="user_avatar">user avatar</string>
    <string name="way_to_take_attendance">way to take attendance</string>
    <string name="way_to_mark_attendance">way to mark attendance</string>
    <string name="refresh_roll_number_list">Refresh Roll No. List</string>
    <string name="add_new_roll_number">Add New Roll Number</string>
    <string name="end_label">End :</string>
    <string name="start_label">Start :</string>
    <string name="ending_roll_no">ending roll no</string>
    <string name="starting_roll_no">starting roll no</string>
    <string name="roll_no_label">Roll No :</string>
    <string name="roll_number">roll number</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="Meetings">Meetings</string>
    <string name="no_meets_found">No Meetings Found</string>
    <string name="partition">|</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="menu_items">menu items</string>
    <string name="save_to">Save To:</string>
    <string name="meeting_name">meeting name</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="save">Save</string>
    <string name="enter_roll_no_range">Enter Roll Number Range</string>
    <string name="ok">OK</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="icon_to_open_drawer">icon to open drawer</string>
    <string name="turn_off_hotspot">Please Turn off Hotspot</string>
    <string name="turn_off_wifi">Please Turn off Wifi</string>

</resources>
