<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--        app:cardCornerRadius="8dp">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp">

            <TextView
                android:id="@+id/fragment_attendance_range_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/enter_roll_no_range"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/starting_roll_no_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:labelFor="@id/start"
                android:text="@string/start_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_attendance_range_dialog_title" />

            <EditText
                android:id="@+id/start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="number"
                android:hint="@string/starting_roll_no"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="@id/starting_roll_no_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/starting_roll_no_text"
                app:layout_constraintTop_toTopOf="@id/starting_roll_no_text" />

            <TextView
                android:id="@+id/ending_roll_no_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/end"
                android:text="@string/end_label"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/end"
                app:layout_constraintStart_toStartOf="@id/starting_roll_no_text"
                app:layout_constraintTop_toTopOf="@id/end" />

            <EditText
                android:id="@+id/end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autofillHints="number"
                android:hint="@string/ending_roll_no"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@id/start"
                app:layout_constraintStart_toStartOf="@id/start"
                app:layout_constraintTop_toBottomOf="@+id/start" />

            <TextView
                android:id="@+id/cancel"
                style="@style/AppTheme.AlertDialogButton.Negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@id/submit"
                app:layout_constraintEnd_toStartOf="@id/submit"
                app:layout_constraintTop_toTopOf="@id/submit" />

            <TextView
                android:id="@+id/submit"
                style="@style/AppTheme.AlertDialogButton.Positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/end" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>